# RID-ILLFP

./: .gitignore  CITATION.cff  LICENSE  README.md  bootstrap_spq.py  pyproject.toml
spq/: __init__.py  cli.py  examples.py  language.py  model.py  parser.py  semantics.py  trace.py
tests/: test_parser.py  test_telescope.py
