[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spq"
version = "0.1.0"
description = "Model checker for Dynamic Epistemic Logic of Semi-Public Queries (SPQ)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "International Laboratory for Logic, Linguistics and Formal Philosophy, HSE University" },
]
keywords = [
    "dynamic epistemic logic",
    "DEL",
    "semi-public queries",
    "resource-bounded agents",
    "common knowledge",
    "model checking",
    "multi-agent systems",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.8"]

[project.scripts]
spq = "spq.cli:main"

[project.urls]
"Paper (arXiv)" = "https://arxiv.org/abs/2401.13369"
"Laboratory" = "https://llfp.hse.ru"

[tool.setuptools.packages.find]
include = ["spq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
